@@ -15,6 +15,7 @@ Bugs fixed:
 - 2948647 getObjectPath may dereference NULL pointer
 - 2963746 Incorrect license in test makefiles
 - 2966804 setObjectPath returns uninitialized pointer
+- 2968246 connect2 builds unnecessary struct
 
 Changes in 1.3.7
 ================
